# hy-ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  maps.md  pakkauskaavio.mermaid  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtävä1.md  tehtävä2.md
src/: index.py
src/map/: abstract.py  entity.py  init.sql  schema.sql  sql.py  types.py
src/map_store/: init.sql  schema.sql  store.py
src/tests/: map_store_test.py  map_test.py
src/ui/: application.py  view.py
src/ui/components/: buttons.py  editor.py  editor_object.py  editor_properties.py  editor_sidebar.py  inputs.py  typography.py
src/ui/components/editor_properties/: element.py  text.py
src/ui/views/: create.py  delete.py  editor.py  rename.py  select.py
