[project]
name = "blocky-dungeon-mapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Esinko",email = "eemil.sinkko@helsinki.fi"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

